<resources>
    <string name="app_name">Todomoro</string>
    <string name="content_logo">Logo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="description">Password</string>
    <string name="fragment_login_login_button">Login</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_short_password">Password must be at least 6 characters long</string>
    <string name="string_error_blank_password">Password cannot be empty</string>
    <string name="error_empty_username">Username cannot be empty</string>
    <string name="error_blank_username">Username cannot be whitespaces</string>
    <string name="error_blank_password">Password cannot be whitespaces</string>
    <string name="hint_password_verification">Verify password</string>
    <string name="button_signup">Signup</string>
    <string name="error_passwords_mismatch">Passwords does not match</string>
    <string name="label_no_account">Don\'t have an account?</string>
    <string name="button_login_text">Have an account? Log In</string>
    <string name="button_signup_text">Don\'t have an account? Sign Up</string>
    <string name="error_login">There\'s been an error during login, please try again later.</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="fragment_title_overview">Overview</string>
    <string name="taskTitlePlaceholder">Title</string>
    <string name="taskDueDescription">Due</string>
    <string name="taskInfo">Show Task Info</string>
    <string name="taskTitleHint">Title</string>
    <string name="taskDescriptionHint">Description (Markdown enabled)</string>
    <string name="dueDateTitle">Due date</string>
    <string name="datePlaceholder">01, Jan, 1999</string>
    <string name="timePlaceholder" translatable="false">00:00</string>
    <string name="error_blank_title">Title cannot be blank</string>
    <string name="error_creating_task">There was an error saving this task, try again.</string>
    <string name="action_done">Mark as done</string>
    <string name="action_pomodoro">Pomodoro</string>
    <string name="action_details">Details</string>
    <string name="error_signup">There\'s been an error, try again.</string>
    <string name="label_color">Color</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_show_done">Show done tasks</string>
    <string name="action_show_stats">Show stats</string>
    <string name="current_user">Account</string>
    <string name="action_edit">Edit</string>
    <string name="timer_placeholder" translatable="false">25:00</string>
    <string name="minute" translatable="false">m</string>
    <string name="seconds" translatable="false">s</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_more">More information</string>
    <string name="updated_correctly">Task has been updated successfully</string>
    <string name="transaction_error">There\'s been an error, try again later.</string>
    <string name="deleted_successfully">Task has been deleted successfully</string>
    <string name="created_at_title">Created:</string>
    <string name="updated_at_title">Updated:</string>
    <string name="no_data">No data available</string>
    <string name="notification_placeholder">Task</string>
    <string name="state_long_break">Long break</string>
    <string name="state_break">Break</string>
    <string name="state_cycle">Work cycle</string>
    <string name="state_unknown">Unknown</string>
    <string name="title_activity_statistic">Statistics</string>
    <string name="title_activity_statistics">Statitstics</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stats_general">General</string>
    <string name="label_unfinished">Unfinished</string>
    <string name="label_finished">Finished</string>
    <string name="chart_general">Tasks</string>
    <string name="no_data_text">There\'s no data to display, go on and do something with your life</string>
    <string name="label_day_span">Day span</string>
    <string name="stats_time">Time</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_day_finished">Finished At</string>
    <string name="label_in_progress">In Progress</string>
    <string name="pomodoro_stats">Pomodoro Stats</string>
    <string name="action_generate_report">Generate report</string>
</resources>
