<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/layout_form"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_login_margin"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:layout_marginTop="@dimen/fragment_login_logo_margin"
            android:layout_marginBottom="@dimen/fragment_login_logo_margin"
            android:src="@drawable/tomato"
            android:layout_gravity="center"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:contentDescription="@string/content_logo"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_marginBottom="@dimen/fragment_login_input_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_username"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_marginBottom="@dimen/fragment_login_input_margin_bottom"
            app:passwordToggleContentDescription="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:hint="@string/hint_password"
                android:maxLines="1"
                android:inputType="textWebPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/fragment_login_login_button"
            android:id="@+id/button_login"/>

    <Button
            android:text="@string/button_signup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_signup"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>


</LinearLayout>
