<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/layout_form"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_login_margin"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
            android:layout_marginTop="@dimen/fragment_login_logo_margin"
            android:layout_marginBottom="@dimen/fragment_login_logo_margin"
            android:src="@drawable/ic_alarm_on_black_24dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_logo"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_marginBottom="@dimen/fragment_login_input_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/hint_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_marginBottom="@dimen/fragment_login_input_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password_verification"
            android:layout_marginBottom="@dimen/fragment_login_input_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:hint="@string/hint_password_verification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_signup"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/button_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>


</LinearLayout>
