<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/taskTitleHint" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_inputMarginTop"
            android:hint="@string/taskDescriptionHint"
            android:maxLines="10"
            android:minLines="10" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hr_margin"
            android:layout_marginTop="@dimen/hr_margin"
            android:background="@color/colorPrimary"
            android:minHeight="1px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/login_inputMarginTop"
            android:text="@string/dueDateTitle"
            android:textSize="@dimen/sectionTitleTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_inputMarginTop"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:text="@string/datePlaceholder"
                android:textSize="@dimen/labelTextSize" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_inputMarginTop"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:paddingStart="@dimen/time_padding"
                android:paddingEnd="@dimen/time_padding"
                android:text="@string/timePlaceholder"
                android:textSize="@dimen/labelTextSize" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hr_margin"
            android:layout_marginTop="@dimen/hr_margin"
            android:background="@color/colorPrimary"
            android:minHeight="1px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_color" />

        <ImageView
            android:id="@+id/color_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_dot"
            android:tint="@color/red" />

    </LinearLayout>

</ScrollView>