<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/created_at_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datePlaceholder"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/updated_at_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datePlaceholder"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>